Opened 10 years ago

Closed 9 years ago

Last modified 9 years ago

#4046 closed defect (fixed)

DVB subtitles not detected in TS file

Reported by: Underground78 Owned by:
Priority: important Component: avformat
Version: git-master Keywords: mpegts dvbsub
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

Summary of the bug: This sample has two DVB subtitle tracks but ffmpeg doesn't detect them unless you skip the beginning of the file with -skip_initial_bytes 61289. I tried changing -probesize and -analyseduration without any luck.

How to reproduce:

% ffmpeg.exe -i sample.ts
ffmpeg version N-67034-gb5583fc Copyright (c) 2000-2014 the FFmpeg developers
  built on Oct 20 2014 01:15:15 with gcc 4.9.1 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-avisynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enable-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --enable-libfreetype --enable-libgme --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxavs --enable-libxvid --enable-zlib
  libavutil      54. 10.100 / 54. 10.100
  libavcodec     56.  8.102 / 56.  8.102
  libavformat    56.  9.101 / 56.  9.101
  libavdevice    56.  1.100 / 56.  1.100
  libavfilter     5.  1.106 /  5.  1.106
  libswscale      3.  1.101 /  3.  1.101
  libswresample   1.  1.100 /  1.  1.100
  libpostproc    53.  3.100 / 53.  3.100
[mpeg2video @ 002f8360] Invalid frame dimensions 0x0.
    Last message repeated 18 times
[mpegts @ 04707ca0] PES packet size mismatch
    Last message repeated 3 times
Input #0, mpegts, from 'sample.ts':
  Duration: 00:01:28.42, start: 38151.295833, bitrate: 4743 kb/s
  Program 1 
    Stream #0:0[0x44](fra): Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, s16p, 192 kb/s
    Stream #0:1[0x45](qaa): Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, s16p, 192 kb/s
    Stream #0:2[0x46]: Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, s16p, 192 kb/s
    Stream #0:3[0x47]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p(tv), 720x576 [SAR 64:45 DAR 16:9], max. 15000 kb/s, 25 fps, 25.08 tbr, 90k tbn, 50 tbc

Compare to:

% ffmpeg.exe -skip_initial_bytes 61289 -i sample.ts
ffmpeg version N-67034-gb5583fc Copyright (c) 2000-2014 the FFmpeg developers
  built on Oct 20 2014 01:15:15 with gcc 4.9.1 (GCC)
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-avisynth --enable-bzlib --enable-fontconfig --enable-frei0r --enable-gnutls --enable-iconv --enable-libass --enable-libbluray --enable-libbs2b --enable-libcaca --enable-libfreetype --enable-libgme --enable-libgsm --enable-libilbc --enable-libmodplug --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-librtmp --enable-libschroedinger --enable-libsoxr --enable-libspeex --enable-libtheora --enable-libtwolame --enable-libvidstab --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-libvorbis --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxavs --enable-libxvid --enable-zlib
  libavutil      54. 10.100 / 54. 10.100
  libavcodec     56.  8.102 / 56.  8.102
  libavformat    56.  9.101 / 56.  9.101
  libavdevice    56.  1.100 / 56.  1.100
  libavfilter     5.  1.106 /  5.  1.106
  libswscale      3.  1.101 /  3.  1.101
  libswresample   1.  1.100 /  1.  1.100
  libpostproc    53.  3.100 / 53.  3.100
[mpeg2video @ 04b3d020] Invalid frame dimensions 0x0.
    Last message repeated 17 times
[NULL @ 04bf6be0] start time for stream 4 is not set in estimate_timings_from_pts
[NULL @ 04bb46c0] start time for stream 5 is not set in estimate_timings_from_pts
[mpegts @ 02aae0e0] PES packet size mismatch
    Last message repeated 3 times
Input #0, mpegts, from 'sample.ts':
  Duration: 00:01:27.71, start: 38151.998867, bitrate: 4781 kb/s
  Program 1 
    Stream #0:0[0x44](fra): Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, s16p, 192 kb/s
    Stream #0:1[0x45](qaa): Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, s16p, 192 kb/s
    Stream #0:2[0x46]: Audio: mp2 ([3][0][0][0] / 0x0003), 48000 Hz, stereo, s16p, 192 kb/s
    Stream #0:3[0x47]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p(tv), 720x576 [SAR 64:45 DAR 16:9], max. 15000 kb/s, 25 fps, 25 tbr, 90k tbn, 50 tbc
    Stream #0:4[0x48](fra): Subtitle: dvb_subtitle ([6][0][0][0] / 0x0006)
    Stream #0:5[0x49](eng): Subtitle: dvb_subtitle ([6][0][0][0] / 0x0006)

Attachments (1)

sample_cut.ts (2.0 MB ) - added by Carl Eugen Hoyos 10 years ago.

Download all attachments as: .zip

Change History (4)

comment:1 by Carl Eugen Hoyos, 10 years ago

Component: undeterminedavformat
Keywords: mpegts dvbsub added
Priority: normalimportant
Reproduced by developer: set
Status: newopen

Regression since c6c172d1
Related to ticket #2441 and #3762

Last edited 10 years ago by Carl Eugen Hoyos (previous) (diff)

by Carl Eugen Hoyos, 10 years ago

Attachment: sample_cut.ts added

comment:2 by Michael Niedermayer, 9 years ago

Resolution: fixed
Status: openclosed

comment:3 by Kieran Kunhya, 9 years ago

"alternatively Ticket4046 could be closed as invalid or wontfix as it contains
some PMTs which lack the 2 subtitle streams"

No, this stream is valid. The subtitle stream is allowed to come and go since the PMT defines its existence in the first place.

Note: See TracTickets for help on using tickets.